--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,14 +14,34 @@ html{
     scroll-behavior: smooth;
 }
 /*Animação*/
-@keyframes fadeIn {
+@keyframes fadeUp {
     0%{
-      transform: translateY(100%);
+        transform: translateY(100%);
     }
     100%{
-      transform: translateY(0);
+        transform: translateY(0);
     }
-  }
+}
+@keyframes fadeInLeft {
+    0%{
+        opacity: 0;
+        transform: translateX(-100%) scale(1);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0%) scale(1);
+    }
+}
+@keyframes fadeInRigth {
+    0%{
+        opacity: 0;
+        transform: translateX(100%) scale(1);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0%) scale(1);
+    }
+}
  
 *{
     margin: 0;
@@ -78,7 +98,7 @@ header{
     color: #5f60b3;
 }
 .menu.abrirH{
-    animation: fadeIn 1s ease-in-out alternate;
+    animation: fadeUp 1s ease-in-out alternate;
     display: block;
 }
 .home{
@@ -93,10 +113,14 @@ header{
     background-color: #dceef8;
     margin-bottom: 20px;
 }
+.text{
+    animation: fadeInRigth 1s ease-in-out alternate;
+}
 .text .titulo{
     font-size: 150px;
     font-family: "Chela One", system-ui;
     color: #5f60b3;
+    
 }
 .descricao{ 
     width: 350px;
@@ -115,6 +139,7 @@ header{
     cursor: pointer;
 }
 .imagem-home{
+    animation: fadeInLeft 1s ease-in-out alternate;
     width: 350px;
 }
 .imagem-home img{
@@ -132,6 +157,7 @@ header{
     font-weight: 600;
 }
 .text-bottom a{
+    animation: fadeInLeft 1s ease-in-out alternate;
     background-color: #5f60b3;
     color: #fff;
     padding: 6px 30px;
